--- a/react-app/index.html
+++ b/react-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://www.reddit.com/media?url=https%3A%2F%2Fi.redd.it%2Ffhs2f867erpb1.png" />
+    <link rel="icon" type="image/svg+xml" href="/rick.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raunak</title>
   </head>
